<resources>
    <string name="app_name">MovieTong</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_playingevent">진행중인 이벤트</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro_login">intro_login</string>
    <string name="str_btn_facebookconnect">FACEBOOK Connect</string>
    <string name="str_btn_signup">회원가입</string>
    <string name="str_btn_login">로그인</string>
    <string name="str_intro_titletext">예고편만 봐도 포인트가 쌓이는 \n 신개념 앱</string>
    <string name="str_hint_pw">비밀번호</string>
    <string name="str_hint_email">이메일 주소</string>
    <string name="str_hint_pwcheck">비밀번호 확인</string>
    <string name="title_activity_activity_manager">activity_manager</string>
    <string name="str_login">LOGIN</string>
    <string name="str_quitmessage">무비통을 종료하시겠습니까?</string>
    <string name="str_yes">예</string>
    <string name="str_no">아니오</string>
    <string name="str_boxofficetop7">박스오피스 Top7</string>
    <string name="str_close">닫기</string>
    <string name="str_signup">회원가입</string>
    <string name="str_pleasinputpw">비밀번호를 입력해주세요</string>
    <string name="str_soonmoviealllist">상영예정작 전체 리스트</string>
</resources>
