<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/thumb_bg"
    android:gravity="center"
    android:minHeight="200dp"
    android:minWidth="400dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView16"
            android:background="@drawable/title_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView16"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/str_quitmessage"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_no"
            android:id="@+id/quit_button_no"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#ff666666"
            android:textColor="#ffffffff"
            android:typeface="normal"
            android:layout_marginBottom="30dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_yes"
            android:id="@+id/quit_button_yes"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#ffe65948"
            android:textColor="#ffffffff"
            android:typeface="normal"
            android:layout_marginBottom="30dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
