<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/thumb_bg"
    android:gravity="center"
    android:minHeight="350dp"
    android:minWidth="400dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_login"
        android:id="@+id/textView16"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView12"
        android:background="@drawable/img_tiling"
        android:adjustViewBounds="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/login_editText_email"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/str_hint_email" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView13"
        android:background="@drawable/img_tiling"
        android:adjustViewBounds="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="이메일을 입력해주세요"
        android:id="@+id/login_textView_email_comment"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textColor="#ffe65948" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/login_editText_pw"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/str_hint_pw"
        android:inputType="textPassword" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView14"
        android:background="@drawable/img_tiling"
        android:adjustViewBounds="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="비밀번호를 입력해주세요"
        android:id="@+id/login_textView_pw_comment"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textColor="#ffe65948" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login"
        android:id="@+id/login_button_ok"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffe65948"
        android:textColor="#ffffffff"
        android:typeface="normal"
        android:layout_marginBottom="30dp" />
</LinearLayout>
